<resources>
    <string name="app_name">amsallel_tabata_timer</string>
    <string name="button_add_workout">Créer un nouvel entrainement</string>
    <string name="training_name">Nom de l\'entrainement</string>
    <string name="prepare_title">Préparer</string>
    <string name="prep_timer">00:00</string>
    <string name="prep_minute">0</string>
    <string name="prep_seconds">0</string>
    <string name="workout_title">Titre workout</string>
    <string name="work_title">Travail</string>
    <string name="rest_label">Repos</string>
    <string name="cycle_label">Cycles</string>
    <string name="set_label">Sets</string>
    <string name="restBtwSet_label">Repos entre les sets</string>
    <string name="exit_button_text">Sortir</string>
    <string name="start" > </string>
    <string name="pause" />
    <string name="action_title">Titre action</string>
    <string name="action_label">action label</string>
</resources>