<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200"
    android:padding="7dp">

    <TextView
        android:id="@+id/textViewWorkoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/workout_title"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textViewPreparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prepare_title"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textViewWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/work_title"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textViewRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/rest_label"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textViewCycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cycle_label"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textViewSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_label"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textViewRestBtwSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/restBtwSet_label"
        android:textSize="15sp"/>
</LinearLayout>
