<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".AddWorkoutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/ic_round_close_24"
            android:onClick="onClose"
            />

        <ImageButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/ic_round_save_24" />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="@string/training_name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prepare_title"
        android:gravity="center_horizontal"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_down"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/ic_baseline_remove_24" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/edit_text_prep_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/prep_minute"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=":"/>
            <EditText
                android:id="@+id/edit_text_prep_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/prep_seconds"
                />
        </LinearLayout>
        <ImageButton
            android:id="@+id/button_up"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/ic_baseline_add_24"
            />
    </RelativeLayout>
</LinearLayout>


